# label-6135

./: README.md  package-lock.json  package.json  start-dev.ps1  start-dev.sh
.github/workflows/: ci.yml
backend/: database.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
backend/data/: podcast.db
backend/routers/: __init__.py  data.py  episodes.py  listening_notes.py  podcasts.py  statistics.py
backend/services/: __init__.py  stats_service.py
backend/tests/: conftest.py  test_episodes.py  test_podcasts.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: podcasts.ts
frontend/src/pages/: EpisodeListPage.tsx  PodcastDetailPage.tsx  PodcastListPage.tsx  StatisticsPage.tsx  ThemesPage.tsx
frontend/src/types/: index.ts
scripts/: check-backend.js  check-frontend.js  ci-backend-healthcheck.js  dev.js  healthcheck.js  install-backend.js  start-backend.js
