[project]
name = "podcast-backend"
version = "0.1.0"
description = "小众播客节目单 API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "database", "models", "schemas", "seed"]

[tool.setuptools.packages.find]
include = ["routers*", "services*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[project.scripts]
test = "pytest"

[tool.setuptools.package-data]
tests = ["*.py"]

